--- a/templates/user_temp/user_index.html
+++ b/templates/user_temp/user_index.html
@@ -14,7 +14,7 @@
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
 								<span class="ltext-101 cl2 respon2">
-									BOOTS Collection 2023
+								ANSIL RAHMAN
 								</span>
 							</div>
 								
