--- a/templates/admin_temp/admin_login.html
+++ b/templates/admin_temp/admin_login.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 
-<!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/page-account-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:33:33 GMT -->
 <head>
     <meta charset="utf-8">
     <title>Admin login</title>
@@ -14,8 +13,7 @@
     <meta property="og:type" content="">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/imgs/theme/favicon.svg' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/icon/voxy.png' %}">
     <!-- Template CSS -->
     <link href="{% static 'assets/css/main.css' %}" rel="stylesheet" type="text/css" />
 </head>
