--- a/templates/admin_temp/admin_review.html
+++ b/templates/admin_temp/admin_review.html
@@ -7,7 +7,7 @@
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
             <a href="/admin_index" class="brand-wrap">
-                <img src="{% static 'assets/imgs/theme/logo.png' %}" class="logo" alt="Evara Dashboard">
+                <img src="{% static 'img/voxy.png' %}" class="logo" alt="Evara Dashboard">
             </a>
             <div>
                 <button class="btn btn-icon btn-aside-minimize"> <i class="text-muted material-icons md-menu_open"></i> </button>
@@ -70,12 +70,6 @@
                 </div>
             </div>
             <div class="card mb-4">
-                {% comment %} <header class="card-header">
-                    <div class="row gx-3">
-                        <div class="col-lg-4 col-md-6 me-auto">
-                            <input type="text" placeholder="Search..." class="form-control">
-                        </div>
-                </header> {% endcomment %}
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-hover">
