--- a/templates/admin_temp/admin_order_details.html
+++ b/templates/admin_temp/admin_order_details.html
@@ -7,7 +7,7 @@
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
             <a href="/admin_index" class="brand-wrap">
-                <img src="{% static 'assets/imgs/theme/logo.png' %}" class="logo" alt="Evara Dashboard">
+                <img src="{% static 'img/voxy.png' %}" class="logo" alt="Evara Dashboard">
             </a>
             <div>
                 <button class="btn btn-icon btn-aside-minimize"> <i class="text-muted material-icons md-menu_open"></i> </button>
@@ -225,17 +225,14 @@
                                 <p>
                                    <h6>Tranc ID:{{payment.payment_id}}</h6>
                                    <h6>{{payment.payment_method}}</h6>
-                                   <h6>{{payment.status}}</h6>
+                                   {% comment %} <h6>{{payment.status}}</h6> {% endcomment %}
                                 </p>
                             </div>
                         </div> 
-                        {% if order.status == 'Return Pending' %}
+                        {% if order.return_reason %}
                             <div class="col-lg-4">
-                                <div class="box shadow-sm bg-light">
-                                    <h5 >Reutrn Reason</h5><br>
-                                    <h6>{{order.status}}</h6>
-                                    </p>
-                                </div>
+                                    <h5 >Reutrn Reason:{{order.return_reason}}</h5>
+                                    
                             </div> 
                         {% endif %}
                     </div>
