--- a/templates/admin_temp/admin_review_replay.html
+++ b/templates/admin_temp/admin_review_replay.html
@@ -7,7 +7,7 @@
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
             <a href="/admin_index" class="brand-wrap">
-                <img src="{% static 'assets/imgs/theme/logo.png' %}" class="logo" alt="Evara Dashboard">
+                <img src="{% static 'img/voxy.png' %}" class="logo" alt="Evara Dashboard">
             </a>
             <div>
                 <button class="btn btn-icon btn-aside-minimize"> <i class="text-muted material-icons md-menu_open"></i> </button>
