--- a/templates/user_temp/user_index.html
+++ b/templates/user_temp/user_index.html
@@ -8,30 +8,8 @@
   <section class="section-slide">
 		<div class="wrap-slick1">
 			<div class="slick1">
-				<div class="item-slick1" style="background-image: url({% static 'img/hero/hero-1.jpg' %});">
-					<div class="container h-full">
-						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
-								<span class="ltext-101 cl2 respon2">
-									ADIDAS NEW COLLECTION
-								</span>
-							</div>
-							<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
-								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-									Nemeziz Messi 17+ "Pyro Storm"
-								</h2>
-							</div>
-								
-							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
-								<a href="/user_shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-									Shop Now
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
 
-				<div class="item-slick1" style="background-image: url({% static 'img/hero/1.gif' %});">
+        <div class="item-slick1" style="background-image: url({% static 'img/hero/1.gif' %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
@@ -47,6 +25,29 @@
 							</div>
 								
 							<div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
+								<a href="/user_shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+									Shop Now
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="item-slick1" style="background-image: url({% static 'img/hero/hero-1.jpg' %});">
+					<div class="container h-full">
+						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
+							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
+								<span class="ltext-101 cl2 respon2">
+									ADIDAS NEW COLLECTION
+								</span>
+							</div>
+							<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
+								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
+									Nemeziz Messi 17+ "Pyro Storm"
+								</h2>
+							</div>
+								
+							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
 								<a href="/user_shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
 									Shop Now
 								</a>
@@ -78,7 +79,8 @@
 						</div>
 					</div>
 				</div>
-                <div class="item-slick1" style="background-image: url({% static 'img/hero/hero-3.jpg' %});">
+
+        <div class="item-slick1" style="background-image: url({% static 'img/hero/hero-3.jpg' %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
@@ -101,9 +103,11 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
   </section>
+
   <section class="section box-categories"> 
       <div class="container"> 
         <div class="row align-items-center"> 
@@ -113,7 +117,6 @@
                 <p class="tag-title text-16-medium mb-15">Boots Collection</p>
                 <h2 class="mb-30">Play with your heart</h2>
                 <p class="body-p2 mb-30"></p><a class="link-underline" href="/user_shop/category/boots/">Shop Now</a>
-
               </div>
               <div class="cardImage"> <img src="{% static 'img/banner/banner-1.jpg' %}" alt="Guza"></div>
             </div>
@@ -149,6 +152,7 @@
         </div>
       </div>
   </section>
+
   <section class="section block-collection-1"> 
     <div class="container"> 
       <div class="">
@@ -166,41 +170,20 @@
       </div>
     </div>
   </section>
-  
-  <section class="section icon-box-type1 wow fadeInUp"> 
-      <div class="container"> 
-        <div class="row"> 
-          <div class="col-3"> 
-            <div class="box-icon-type-1"> 
-              <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage3/ship.svg'%}" alt="Guza"></div>
-              <div class="item-info"> <span class="text-18">Free Shipping</span></div>
-            </div>
-          </div>
-          <div class="col-3"> 
-            <div class="box-icon-type-1"> 
-              <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/return.svg'%}" alt="Guza"></div>
-              <div class="item-info"> <span class="text-18">60 - Days of Return</span></div>
-            </div>
-          </div>
-          <div class="col-3"> 
-            <div class="box-icon-type-1"> 
-              <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/payment.svg'%}" alt="Guza"></div>
-              <div class="item-info"> <span class="text-18">Security Payment</span></div>
-            </div>
-          </div>
-          <div class="col-3"> 
-            <div class="box-icon-type-1"> 
-              <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/cart.svg'%}" alt="Guza"></div>
-              <div class="item-info"> <span class="text-18">Order Tracking</span></div>
-            </div>
-          </div>
-        </div>
+
+  <section class="section block-banner-street" style="background-image: url({% static 'img/hero/hero-5.jpg' %});"> 
+    <div class="container"> 
+      <div class="box-banner-street">
+        <h1 class="text-68 mb-10">Football Completes</h1>
+        <p class="text-24 mb-30">Ready to roll from the jump</p><a class="btn btn-white" href="/user_shop">Shop Now</a>
       </div>
+    </div>
   </section>
+
   <section class="section block-instagram-type4-home7">
     <div class="container"> 
       <div class="text-center">
-        <h6 class="text-18-medium instagram-title wow fadeInLeft">Instagram with #July</h6>
+        <h6 class="text-18-medium instagram-title wow fadeInLeft">PHOTO GALLERY</h6>
       </div>
     </div>
     <div class="box-gallery-instagram"> 
@@ -209,6 +192,37 @@
       <div class="gallery-item wow fadeInUp"><img src="{% static 'img/profile/3.jpg' %}" alt="voxy"></div>
       <div class="gallery-item wow fadeInUp"><img src="{% static 'img/profile/4.jpg' %}" alt="voxy"></div>
       <div class="gallery-item wow fadeInRight"><img src="{% static 'img/profile/5.jpg' %}" alt="voxy"></div>
+    </div>
+  </section>
+
+  <section class="section icon-box-type1 wow fadeInUp"> 
+    <div class="container"> 
+      <div class="row"> 
+        <div class="col-3"> 
+          <div class="box-icon-type-1"> 
+            <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage3/ship.svg'%}" alt="Guza"></div>
+            <div class="item-info"> <span class="text-18">Free Shipping</span></div>
+          </div>
+        </div>
+        <div class="col-3"> 
+          <div class="box-icon-type-1"> 
+            <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/return.svg'%}" alt="Guza"></div>
+            <div class="item-info"> <span class="text-18">60 - Days of Return</span></div>
+          </div>
+        </div>
+        <div class="col-3"> 
+          <div class="box-icon-type-1"> 
+            <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/payment.svg'%}" alt="Guza"></div>
+            <div class="item-info"> <span class="text-18">Security Payment</span></div>
+          </div>
+        </div>
+        <div class="col-3"> 
+          <div class="box-icon-type-1"> 
+            <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/cart.svg'%}" alt="Guza"></div>
+            <div class="item-info"> <span class="text-18">Order Tracking</span></div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
