--- a/templates/user_temp/user_payment.html
+++ b/templates/user_temp/user_payment.html
@@ -62,7 +62,7 @@
                             <div class="shopping__cart__table">
                                 <h4 class="order__title">Payment Option</h4>
                                 
-                                <a type="button" onclick="showCashOnDeliveryAlert('{{ order.order_number }}')" class="btn btn-dark btn-lg btn-block">Cash On Delivery</a>
+                                <a type="button" onclick="showCashOnDeliveryAlert('{{ order.order_number }}')" class="btn btn-warning btn-lg btn-block" style="color:white;">Cash On Delivery</a>
                                 <hr>
                                 <button id="rzp-button1" class="btn btn-primary btn-lg btn-block">Pay with Razorpay</button>
                             </div>
