--- a/templates/user_temp/user_forgot_password.html
+++ b/templates/user_temp/user_forgot_password.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %}
 {% load static %}
-{% block title %}FORGOT PASSWORD{% endblock title %}
+{% block title %}VOXY{% endblock title %}
 {% block body %}
 
 <!-- Breadcrumb Section Begin -->
@@ -10,10 +10,7 @@
 			<div class="col-lg-12">
 				<div class="breadcrumb__text">
 					<h4>Forgot Password</h4>
-					<div class="breadcrumb__links">
-						<a href="/">USER</a>
-						<span>Forgot Password</span>
-					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -36,7 +33,7 @@
 						<p>
 							<input class="form-control"  type="email" placeholder="Email" name="email" id="email" required>
 						</p>
-						<p class="forgot-signup-links">
+						<p class="forgot-signup-links mb-2 mt-2">
 							<a href="/user_login">Login</a> | <a href="{% url 'user_sign_up' %}">Sign Up</a> 
 						</p>
 						<p><input class="btn btn-black d-block" type="submit" value="SUBMIT"></p>
