--- a/templates/user_temp/user_order_detailed_view.html
+++ b/templates/user_temp/user_order_detailed_view.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %} 
 {% load static %} 
-{% block title%}ORDER DETAILS{%endblock title %}
+{% block title%}VOXY{%endblock title %}
 {% block body %}
 
 <section class="breadcrumb-option"style="margin-top: 90px;">
