--- a/templates/user_temp/user_reset_password.html
+++ b/templates/user_temp/user_reset_password.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %}
 {% load static %}
-{% block title %}RESET PASSWORD{% endblock title %}
+{% block title %}VOXY{% endblock title %}
 {% block body %}
 
 <!-- Breadcrumb Section Begin -->
@@ -10,10 +10,6 @@
 			<div class="col-lg-12">
 				<div class="breadcrumb__text">
 					<h4>VERIFICATION</h4>
-					<div class="breadcrumb__links">
-						<a href="/user_sign_up">USER</a>
-						<span>Verification</span>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -27,7 +23,7 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2">
 					<div class="form-title">
-						<h2>Rest your password!</h2>
+						<h2>Reset your password!</h2>
 						<p>Reset your password and login to your account</p>
 					</div>
 					<div class="contact-form">
@@ -35,13 +31,16 @@
 						<form method="POST" action="{% url 'user_reset_password' %}">
 							{% csrf_token %}
 							<p>
-								<input type="password" placeholder="Password" name="password" id="password" required>
+								<input class="form-control mt-2" type="password" placeholder="Password" name="password" id="password" required>
 							</p>
 							<p>
-								<input type="password" placeholder="Confirm Password" name="confirm_password" id="password" required>
+								<input class="form-control mt-2" type="password" placeholder="Confirm Password" name="confirm_password" id="password" required>
+							</p>
+							<p class="forgot-signup-links mb-2 mt-2">
+								<a href="/user_login">Login</a> | <a href="{% url 'user_sign_up' %}">Sign Up</a> 
 							</p>
 
-							<p><input type="submit" value="RESET"></p>
+							<p><input class="btn btn-black mt-3" type="submit" value="RESET"></p>
 						</form>
 					</div>
 				</div>
