--- a/templates/user_temp/user_shipping.html
+++ b/templates/user_temp/user_shipping.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %} 
 {% load static %} 
-{% block title%}SHIPPING{%endblock title %}
+{% block title%}VOXY{%endblock title %}
 {% block body %}
 
 <main class="main">
@@ -113,8 +113,8 @@
                                                     </div>
                                                     
                                                     <div class="modal-footer col-md-12">
-                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                        <button type="submit"class="btn btn-primary">Add Address</button>
+                                                        <button type="button" class="btn btn-border" data-dismiss="modal">Close</button>
+                                                        <button type="submit"class="btn btn-black">Add Address</button>
                                                     </div>
                                                 </form>
                                             </div>
@@ -243,8 +243,8 @@
                                                                     </div> 
                                                                     
                                                                     <div class="modal-footer col-md-12">
-                                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                                    <button type="submit"class="btn btn-primary">Save Address</button>
+                                                                    <button type="button" class="btn btn-border" data-dismiss="modal">Close</button>
+                                                                    <button type="submit"class="btn btn-black">Save Address</button>
                 
                                                                     </div>
                                                                 </form>
