--- a/templates/user_temp/user_wishlist.html
+++ b/templates/user_temp/user_wishlist.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %}
 {% load static %}
-{% block title %}WISHLIST{% endblock title %}
+{% block title %}VOXY{% endblock title %}
 {% block body %}
 
 
