--- a/templates/admin_temp/admin_review.html
+++ b/templates/admin_temp/admin_review.html
@@ -1,6 +1,6 @@
 {% extends 'admin_temp/base.html' %}
 {% load static %}
-{% block title %}DASHBOARD{% endblock title %}
+{% block title %}VOXY{% endblock title %}
 {% block body %}
 
     <div class="screen-overlay"></div>
@@ -48,6 +48,11 @@
                 <li class="menu-item active ">
                     <a class="menu-link" href="/admin_review"> <i class="icon material-icons md-stars"></i>
                         <span class="text">Reviews</span>
+                    </a>
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin_contact"> <i class="icon material-icons md-announcement"></i>
+                        <span class="text">Contacts</span>
                     </a>
                 </li>
             </ul>
