--- a/templates/user_temp/user_checkout.html
+++ b/templates/user_temp/user_checkout.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %} 
 {% load static %} 
-{% block title%}CHECKOUT{%endblock title %}
+{% block title%}VOXY{%endblock title %}
 {% block body %}
 
 <main class="main">
