--- a/templates/user_temp/user_order_confirmed.html
+++ b/templates/user_temp/user_order_confirmed.html
@@ -9,7 +9,7 @@
     <h2 class="text-center">Order Successfully Completed</h2>
 	<br>
 	<div class="text-center">
-		<a href="{% url 'user_shop' %}" class="btn btn-success">Shop more</a>
+		<a href="{% url 'user_shop' %}" class="btn btn-black" style="background-color: green; color: white;  border: none;">Shop more</a>
 	</div>
 </div>
 <div class="container mt-5  invoice-container"  >
