--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -227,4 +227,12 @@
             width: 50%;
         }
     }
+
+
+    @media (max-width: 768px) {
+        .box-icon-type-1 .item-info {
+            display: none;
+        }
+    }
+    
     
