--- a/templates/user_temp/user_contact.html
+++ b/templates/user_temp/user_contact.html
@@ -28,8 +28,8 @@
             <h4>Address</h4>
             <p class="body-p2 neutral-medium-dark mb-45">KOCHI,VYTILLA HUB 678592</p>
             <h4 class="mb-20">Contact</h4>
-            <p class="body-p2 neutral-medium-dark mb-10">Phone.  +1 8592959403</p>
-            <p class="body-p2 neutral-medium-dark mb-45">Email.  voxly.com</p>
+            <p class="body-p2 neutral-medium-dark mb-10">Phone.  +91 8592959403</p>
+            <p class="body-p2 neutral-medium-dark mb-45">Email.  voxy.com</p>
             <h4 class="mb-15">Hour of Operation</h4>
             <p class="body-p2 neutral-medium-dark mb-45">Mon - Fri: 08:30 - 20:00<br>Sat & Sun: 09:30 - 21:30</p>
           </div>
@@ -66,7 +66,7 @@
                   </div>
                   <div class="col-lg-12"> 
                     <div class="text-center mt-10"> 
-                      <button type="submit" class="btn btn-black">Post Comment</button>
+                      <button type="submit" class="btn btn-black">GET IN TOUCH</button>
                     </div>
                   </div>
               </div>
